using System;

public enum ScheduleTypes
{
    EM_2024
}

public enum MatchTypes
{
    Normal,
    KO,
    KO_first_leg,
    KO_second_leg,
    Semifinal,
    Final
}
